--- a/templates/webmaster.html
+++ b/templates/webmaster.html
@@ -31,9 +31,9 @@
                     <hr />
                     <h5>Starting Celery Manually</h5>
                     <code>
-sh -x /etc/init.d/celeryd start
-sh -x /etc/init.d/celerybeat start
-celery flower
+sh -x /etc/init.d/celeryd start<br />
+sh -x /etc/init.d/celerybeat start<br />
+celery flower<br />
                     </code>
                 </div>
             </section>
