--- a/templates/base.html
+++ b/templates/base.html
@@ -454,7 +454,7 @@
                 <div class="notification-info">
                     <ul class="clearfix notification-meta">
                         <li class="pull-left notification-sender"><span><a href="#">{{ user }}</a></span></li>
-                        <li class="pull-right notification-time">{{ time }}</li>
+                        <li class="pull-right notification-time">{{ since }}</li>
                     </ul>
                     <p>{{ text }} </p>
                 </div>
@@ -473,7 +473,7 @@
                         <span class="photo"><img alt="avatar" src="{{ gravatar }}"></span>
                                 <span class="subject">
                                 <span class="booking">{{ long_heading }}</span>
-                                <span class="time">{{ time }}</span>
+                                <span class="time">{{ since }}</span>
                                 </span>
                                 <span class="comment">
                                     {{text}}
