--- a/templates/web/booking_list.html
+++ b/templates/web/booking_list.html
@@ -148,7 +148,7 @@
                 //widthFixed : true,
                 widgets: [ "filter"]
             } );
-            $(".datarow").on("dblclick", function(e) {
+            $(".datarow").on("click", function(e) {
 
                 document.location.href = "/booking/"+this.dataset['id'];
             });
