--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -183,7 +183,7 @@
             minTime: "{{ CALENDAR_MIN_TIME }}",
             maxTime: "{{ CALENDAR_MAX_TIME }}",
             //slotDuration: "1:00",
-            //defaultEventMinutes: 60,
+            defaultEventMinutes: {{ DEFAULT_SLOT_TIME }},
             allDayDefault: false,
             allDaySlot: false,
             //slotMinutes: 60,
@@ -372,6 +372,8 @@
 
                 data = tidy_data(json.objects[0]);
                 populate_form(data, eventid);
+                // holds on click events etc.
+                update_events();
             }
         });
     }
@@ -392,11 +394,11 @@
         // if called from week/day view with a time, this is the requested from time (start)
         // if on month view, then set the deadline to the default time
         if (view.name == "month") {
-            deadline = date.format("YYYYMMDD") + "{{ DEFAULT_DEADLINE_TIME }}";
-            data = {deadline: date.utc().toISOString()};
+            when = date.format("YYYYMMDD");
+            data = {client_id: client_id, deadline: date.utc().toISOString()};
         } else {
-            deadline = date.format("YYYYMMDDHHmm");
-            data = {start: date.utc().toISOString()};
+            when = date.format("YYYYMMDDHHmm");
+            data = {client_id: client_id, start: date.utc().toISOString()};
         }
 
 
@@ -405,30 +407,34 @@
 
         // create a new booking for this client/date
         $.ajax({
-            type:"get",
-            url:"/booking/add/" + client_id + "/" + deadline + "/",
+            type:"post",
+            url:API+"init_booking/",
             data: data,
             dataType : 'json',
             success:function(json){
-                // retrieve the dropped element's stored Event Object
-                var new_event = Array();
 
-                // convert datetimes to moments
-                json = tidy_data(json);
+                 // reload as other values may have changed
+                load_booking(json['ref']);
 
-                // assign it the date that was reported
-                new_event.id = json['ref'];
-                new_event.title = json['title'];
-                new_event.start = json['start'];
-                new_event.allDay = allDay;
-                new_event.ref = json['ref'];
-                new_event.className = "booking_status_1";
-
-
-
-                populate_form(json);
-                // display modal form
-                //$("#booking_entry_form").modal({show:true})
+{#                // retrieve the dropped element's stored Event Object#}
+{#                var new_event = Array();#}
+{##}
+{#                // convert datetimes to moments#}
+{#                json = tidy_data(json);#}
+{##}
+{#                // assign it the date that was reported#}
+{#                new_event.id = json['ref'];#}
+{#                new_event.title = json['title'];#}
+{#                new_event.start = json['start'];#}
+{#                new_event.allDay = allDay;#}
+{#                new_event.ref = json['ref'];#}
+{#                new_event.className = "booking_status_1";#}
+{##}
+{##}
+{##}
+{#                populate_form(json);#}
+{#                // display modal form#}
+{#                //$("#booking_entry_form").modal({show:true})#}
 
                 // render the event on the calendar
                 // the last `true` argument determines if the event "sticks" (http://arshaw.com/fullcalendar/docs/event_rendering/renderEvent/)
@@ -450,6 +456,7 @@
         $("#booking_edit").html(object.template);
 
         // save event id from calendar and ref of object
+        // update: these are now the same eventid==ref
         $("#editform")
                 .attr("data-eventid", eventid )
                 .attr("data-eventref", object.ref );
@@ -457,103 +464,113 @@
         // add classes
         $("#booking_edit").attr("class", 'panel-body booking_status_'+object.status);
 
-        // add ref to all editable fields
-        $('.editable').attr('data-pk', object.ref);
-        $('.editable_done').attr('data-pk', object.ref);
-        $('.editable_cancel').attr('data-pk', object.ref);
+        if (object.editable) {
 
-        // now put data into "fields" or ? if no data
-        $("#modal_label").text("Add Booking for "+object.client.name);
 
-        $("#field_client_name").text(object.client.name);
-        $("#field_deadline_date").text(moment(object.deadline).format("dddd D MMM"));
+            // add ref to all editable fields
+            $('.editable').attr('data-pk', object.ref);
+            $('.editable_done').attr('data-pk', object.ref);
+            $('.editable_cancel').attr('data-pk', object.ref);
 
-        $("#field_activity").text(object.activity.name_verb);
-        $("#field_activity_name").text(object.activity.name);
-        $("#field_activity").attr("data-value", String(object.activity.id));
+            // now put data into "fields" or ? if no data
+            $("#modal_label").text("Add Booking for " + object.client.name);
 
-        if (object.instrument != null) {
-            $("#field_instrument").text(object.instrument.name);
-            $("#field_instrument").attr("data-value", String(object.instrument.id));
+            $("#field_client_name").text(object.client.name);
+            $("#field_deadline_date").text(moment(object.deadline).format("dddd D MMM"));
+
+            $("#field_activity").text(object.activity.name_verb);
+            $("#field_activity_name").text(object.activity.name);
+            $("#field_activity").attr("data-value", String(object.activity.id));
+
+            if (object.instrument != null) {
+                $("#field_instrument").text(object.instrument.name);
+                $("#field_instrument").attr("data-value", String(object.instrument.id));
+            } else {
+                $("#field_instrument").text("?");
+            }
+
+            if (object.studio != null) {
+                $("#field_studio").text(object.studio.name);
+                $("#field_studio").attr("data-value", String(object.studio.id));
+            } else {
+                $("#field_studio").text("?");
+            }
+
+            if (object.client_ref != null) {
+                $("#field_client_ref").text(object.client_ref);
+                $("#field_client_ref").attr("data-value", String(object.client_ref));
+            } else {
+                $("#field_client_ref").text("?");
+            }
+
+            // the line belows turns .uct property from true to false!!!!!
+            // var deadline = object.deadline;
+
+            var dline = object.deadline;
+            if (dline.isValid() && (dline.hour() > 0 || dline.minute() > 0)) {
+                // output as local time here
+                $("#field_deadline_time").text(dline.local().format("HH:mm"));
+                // store as utc
+                $("#field_deadline_time").attr("data-value", dline.toISOString());
+            } else {
+                $("#field_deadline_time").text("?");
+            }
+
+
+            var requested = object.requested_from;
+
+            if (requested.isValid() && (requested.hour() > 0 || requested.minute() > 0)) {
+                // convert as local time here
+                $("#field_requested_time").text(requested.local().format("HH:mm"));
+                //store as utc
+                $("#field_requested_time").attr("data-value", requested.toISOString());
+            } else {
+                $("#field_requested_time").text("?");
+            }
+
+            if (object.booker != null) {
+                $("#field_booker").text(object.booker.full_name);
+                $("#field_booker").attr("data-value", String(object.booker.id));
+            } else {
+                $("#field_booker").text("?");
+            }
+            if (object.tuner != null) {
+                $("#field_tuner").text(object.tuner.full_name);
+                $("#field_tuner").attr("data-value", String(object.tuner.id));
+            } else {
+                $("#field_tuner").text("?");
+            }
+
+
+            if (object.price != null) {
+                $("#field_price").text(object.price);
+                $("#field_price").attr("data-value", String(object.price));
+            } else {
+                $("#field_price").text("?");
+            }
+
+            $("#field_duration").text(object.duration.toFixed(2));
+            $("#field_duration").attr("data-value", String(object.duration));
+
+            // can only update bookings with status < complete
+
+            // load lists of instruments, activities etc. to be used for editable fields
+            load_data(object.client.id, "{{ NOW|date:"d/m/Y" }}", "{{ MAX_DATE|date:"d/m/Y" }}");
+
         } else {
-            $("#field_instrument").text("?");
+            $("#editform").html(object.description);
         }
 
-        if (object.studio != null) {
-            $("#field_studio").text(object.studio.name);
-            $("#field_studio").attr("data-value", String(object.studio.id));
-        } else {
-            $("#field_studio").text("?");
-        }
 
-        if (object.client_ref != null) {
-            $("#field_client_ref").text(object.client_ref);
-            $("#field_client_ref").attr("data-value", String(object.client_ref));
-        } else {
-            $("#field_client_ref").text("?");
-        }
-
-        // the line belows turns .uct property from true to false!!!!!
-        // var deadline = object.deadline;
-
-        var dline = object.deadline;
-        if (dline.isValid() && (dline.hour() > 0 || dline.minute() > 0)) {
-            // output as local time here
-            $("#field_deadline_time").text(dline.local().format("HH:mm"));
-            // store as utc
-            $("#field_deadline_time").attr("data-value", dline.toISOString());
-        } else {
-            $("#field_deadline_time").text("?");
-        }
-
-
-        var requested = object.requested_from;
-
-        if (requested.isValid() && (requested.hour() > 0 || requested.minute() > 0)) {
-            // convert as local time here
-            $("#field_requested_time").text(requested.local().format("HH:mm"));
-            //store as utc
-            $("#field_requested_time").attr("data-value", requested.toISOString());
-        } else {
-            $("#field_requested_time").text("?");
-        }
-
-        if (object.booker != null) {
-            $("#field_booker").text(object.booker.full_name);
-            $("#field_booker").attr("data-value", String(object.booker.id));
-        } else {
-            $("#field_booker").text("?");
-        }
-        if (object.tuner != null) {
-            $("#field_tuner").text(object.tuner.full_name);
-            $("#field_tuner").attr("data-value", String(object.tuner.id));
-        } else {
-            $("#field_tuner").text("?");
-        }
-
-
-        if (object.price != null) {
-            $("#field_price").text(object.price);
-            $("#field_price").attr("data-value", String(object.price));
-        } else {
-            $("#field_price").text("?");
-        }
-
-        $("#field_duration").text(object.duration.toFixed(2));
-        $("#field_duration").attr("data-value", String(object.duration));
-
-
-        // load lists of instruments, activities etc. to be used for editable fields
-        load_data(object.client.id, "{{ NOW|date:"d/m/Y" }}","{{ MAX_DATE|date:"d/m/Y" }}");
-
-
+        // now show the booking
         $("#booking_row").slideDown();
 
+        // enable onclicks
         $("#editable_save").on("click", function() {
             // mark booking as created
             $.ajax({
                 type:"post",
-                url:API+"create_booking/",
+                url:API+"make_booking/",
                 data: {pk: object.ref, value:"{{ request.user.id }}"},
                 dataType : 'json',
                 success:function(json){
@@ -572,23 +589,24 @@
 
         });
 
-        $("#editable_complete").on("click", function() {
-            // mark booking as complete
-
-            $.ajax({
-                type:"post",
-                url:API+"bookings_to_complete/",
-                data: {ref: object.ref,  value:"{{ request.user.id }}"},
-                dataType : 'json',
-                success:function(json){
-                    //TOOD: work out how to return updated object so can pass into close_form
-                    close_form();
-
-
-                }
-            });
-
-        });
+        {#        // .complete_booking in tuning_updates not being triggered so doing it from here#}
+        {#        $("#editable_complete").on("click", function() {#}
+        {#            // mark booking as complete#}
+        {##}
+        {#            $.ajax({#}
+        {#                type:"post",#}
+        {#                url:API+"bookings_to_complete/",#}
+        {#                data: {ref: object.ref,  value:"{{ request.user.id }}"},#}
+        {#                dataType : 'json',#}
+        {#                success:function(json){#}
+        {#                    //TOOD: work out how to return updated object so can pass into close_form#}
+        {#                    close_form();#}
+        {##}
+        {##}
+        {#                }#}
+        {#            });#}
+        {##}
+        {#        });#}
 
         $("#editable_cancel").on("click", function() {
 
@@ -616,6 +634,8 @@
         });
 
     }
+
+
 
     </script>
 
