--- a/templates/web/booking_detail.html
+++ b/templates/web/booking_detail.html
@@ -31,6 +31,9 @@
             height: 250px;
         }
 
+        #button_bar {
+            margin-bottom:20px;
+        }
     </style>
 {% endblock extra_head %}
 
@@ -164,6 +167,13 @@
                     {%  endif %}
 
 
+                </div>
+
+
+
+            </section>
+
+
                     <div id="button_bar">
                         {% if object.status < '5' %}
                             {% if user.is_booker or user.is_admin %}
@@ -193,12 +203,6 @@
                             {% endif %}
                         {% endif %}
                     </div>
-                </div>
-
-
-
-            </section>
-
 
 
         </div>
@@ -217,6 +221,7 @@
 
 
     </div>
+
 
     <div class="row">
         <div class="col-sm-12">
@@ -290,6 +295,8 @@
 
                         success: function(response, newValue) {
                             if(response.status == 'error') return response.msg; //msg will be shown in editable form
+
+                            location.reload();
                         },
                         title: 'Select Tuner'
                     });
