--- a/templates/web/booking_editable_template.html
+++ b/templates/web/booking_editable_template.html
@@ -4,6 +4,8 @@
 {#    Paris time: {{ value }}#}
 {#{% endtimezone %}#}
 
+
+
 <h3 class="editable_title">
     <span id="field_activity_name">Booking</span>
     for
@@ -97,7 +99,7 @@
 
 
 
-<span class="pull-right">
+<span id="button_row" class="pull-right">
     {% comment %}TODO: buttons can change mid edit based on data entered {% endcomment %}
     {% if object.status == '0' %}
         <button id="editable_save" type="button" class="btn btn-success" >Create Booking</button>
@@ -112,7 +114,7 @@
 
     {% if object.status == '3' %}
         <button id="editable_done" type="button" class="btn btn-success" >Done</button>
-        <button id="editable_complete" type="button" class="btn booking_status_3" >Completed</button>
+        <button  type="button" class="btn booking_status_5 complete_booking" data-pk="{{ object.ref }}" >Complete</button>
         <button id="editable_cancel" type="button" class="btn btn-warning" >Cancel Booking</button>
     {% endif %}
 
