--- a/templates/webmaster.html
+++ b/templates/webmaster.html
@@ -25,9 +25,10 @@
                     <a href="/ping/" class="btn btn-primary">Ping Celery</a>
                     <a href="/check_bookings/" class="btn btn-primary">Check Bookings</a>
 
-                    <a href="{{ CELERY_MONITOR_URL }}" class="btn">Celery Monitor</a>
-                    <a href="{{ RABBITMQ_MONITOR_URL }}" class="btn">RabbitMq Monitor</a>
-                    <a href="/admin/django_logtail/log/" class="btn">Log Files</a>
+                    <a href="{{ CELERY_MONITOR_URL }}" class="btn btn-primary">Celery Monitor</a>
+                    <a href="{{ RABBITMQ_MONITOR_URL }}" class="btn btn-primary">RabbitMq Monitor</a>
+                    <a href="/admin/django_logtail/log/" class="btn btn-primary">Log Files</a>
+                    <a href="/test_email/" class="btn btn-primary">Send test emails</a>
                     <hr />
                     <h5>Starting Celery Manually</h5>
                     <code>
