few tweeks to make iphone size look better

--- a/templates/base.html
+++ b/templates/base.html
@@ -249,7 +249,7 @@
                     <li class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <img alt="" src="{{ user.gravatar }}">
-                            <span class="username">{{ user.get_full_name }}</span>
+                            <span class="username hidden-xs">{{ user.get_full_name }}</span>
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu extended logout">
@@ -268,7 +268,7 @@
 
 
                 <li>
-                    <div class="toggle-right-box">
+                    <div class="toggle-right-box hidden-xs">
                         <div class="fa fa-bars"></div>
                     </div>
                 </li>
