--- a/web/static/css/tuning.css
+++ b/web/static/css/tuning.css
@@ -37,7 +37,9 @@ a.logo {
 .booking_status_9 {
     background-color: #fdd752;
 }
-
+tr.booking_status_0{
+    background-color: rgba(250, 250, 250, 1);
+}
 tr.booking_status_1{
     background-color: rgba(252, 135, 101, 0.49);
 }
@@ -117,3 +119,4 @@ color: #454545;
 }
 
 #button_row button {margin-top:10px;}
+#button_row a {margin-top:10px;}
