tidying of editing for mobile.  About to have another go at twilio

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -32,7 +32,7 @@
         .fc-agenda-slots td div {
             height: 25px !important;
         }
-        .client_selection {
+        .client_select {
             margin-bottom:5px;
         }
 /* can't put responsive stuff for calendar in style-responsive as called before calendar.css */
